add version info to openapi and http api
